# socket-log-receiver

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
src/socket_log_receiver/: __init__.py  __main__.py  config.py  handlers.py  receivers.py
tests/: conftest.py  test_receivers.py
tests/integration/: conftest.py  test_log_receiver.py
tests/socket_log_receiver/: conftest.py  test_config.py  test_main.py  test_receivers.py
